희소 검색기(Sparse Retriever) 구현 추가
- BM25 기반 희소 검색기 클래스 구현
- 노트북에 희소 검색기 사용 예제 추가
- 검색 점수 및 매칭된 문서 출력 기능 구현

--- a/notebooks/01.Simple-RAG-Practice.ipynb
+++ b/notebooks/01.Simple-RAG-Practice.ipynb
@@ -10,7 +10,12 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-22T08:04:34.847181Z",
+     "start_time": "2025-09-22T08:04:33.595528Z"
+    }
+   },
    "source": [
     "# 시스템 경로 추가 (노트북에서 상위 디렉토리 모듈 import)\n",
     "import sys\n",
@@ -22,8 +27,18 @@
     "# 프로젝트 이름을 입력합니다.\n",
     "logging.langsmith(\"=== 01.Simple-RAG-Practice ===\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "=== 01.Simple-RAG-Practice ===\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -35,7 +50,12 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-22T08:04:36.946393Z",
+     "start_time": "2025-09-22T08:04:35.798913Z"
+    }
+   },
    "source": [
     "# rag_core 모듈에서 필요한 것들 import\n",
     "from rag_core import (\n",
@@ -48,8 +68,34 @@
     "\n",
     "print(\"✅ 모듈 import 완료\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "검색 결과: 2개 문서\n",
+      "====================================================================================================\n",
+      "\n",
+      "[1] 유사도: 0.5130\n",
+      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
+      "청크 인덱스: 50\n",
+      "페이지: 12\n",
+      "섹션: None\n",
+      "내용: SPRi AI Brief | 2023-12월호 # 삼성전자, 자체 개발 생성 AI ‘삼성 가우스’ 공개 # KEY Contents n 삼성전자가 온디바이스에서 작동 가능하며 언어, 코드, 이미지의 3개 모델로 구성된 자체 개발 생성 AI 모델 ‘삼성 가우스’를 공개 n 삼성전자는 삼성 가우스를 다양한 제품에 단계적으로 탑재할 계획으로, 온디바이스 작동이 가...\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "[2] 유사도: 0.5045\n",
+      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
+      "청크 인덱스: 52\n",
+      "페이지: 12\n",
+      "섹션: None\n",
+      "내용: 사내 소프트웨어 개발에 최적화 ∙ 이미지 모델은 창의적인 이미지를 생성하고 기존 이미지를 원하는 대로 바꿀 수 있도록 지원하며 저해상도 이미지의 고해상도 전환도 지원 n IT 전문지 테크리퍼블릭(TechRepublic)은 온디바이스 AI가 주요 기술 트렌드로 부상했다며, 2024년부터 가우스를 탑재한 삼성 스마트폰이 메타의 라마(Llama)2를 탑재한 퀄컴...\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -63,8 +109,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-22T06:31:33.126808Z",
-     "start_time": "2025-09-22T06:31:32.210450Z"
+     "end_time": "2025-09-22T08:05:24.579445Z",
+     "start_time": "2025-09-22T08:05:24.144131Z"
     }
    },
    "source": [
@@ -90,71 +136,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "질문: 주요 기술 행사일정에 대해 알려줘\n",
-      "임베딩 차원: 4000\n",
-      "Document 테이블: documents_4000\n",
-      "File 테이블: files_4000\n",
-      "스키마: rag\n",
-      "--------------------------------------------------------------------------------\n",
       "\n",
       "검색 결과: 5개 문서\n",
       "====================================================================================================\n",
       "\n",
-      "[1] 유사도: 0.4452\n",
+      "[1] 유사도: 0.0479\n",
       "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
-      "청크 인덱스: 92\n",
-      "페이지: 21\n",
-      "섹션: None\n",
-      "내용: | 행사명 | 행사 주요 개요 | 행사 주요 개요 | 행사 주요 개요 |\n",
-      "| --- | --- | --- | --- |\n",
-      "| CES 2024 | ![image](/image/placeholder)\n",
-      " | - 미국 소비자기술 협회(CTA)가 주관하는 세계 최대 가전·IT·소 비재 전시회로 5G, AR&VR, 디지털헬스, 교통·모빌리티 등 주요 카테고리 중심으로 ...\n",
-      "--------------------------------------------------------------------------------\n",
-      "\n",
-      "[2] 유사도: 0.4121\n",
-      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
-      "청크 인덱스: 99\n",
-      "페이지: 21\n",
-      "섹션: None\n",
-      "내용: # Ⅱ. 주요 행사 일정...\n",
-      "--------------------------------------------------------------------------------\n",
-      "\n",
-      "[3] 유사도: 0.4011\n",
-      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
-      "청크 인덱스: 94\n",
-      "페이지: 21\n",
-      "섹션: None\n",
-      "내용: <table> <title> 2024년 AI 및 기술 컨퍼런스 일정 </title> <details> 이 표는 2024년에 열리는 주요 기술 및 AI 컨퍼런스에 대한 정보를 보여줍니다. 첫 번째 행사는 CES 2024로, 기간은 2024.1.9-12이며, 장소는 미국 라스베가스입니다. 설명으로는 컴퓨터 비전, AR/VR, 디지털 헬스 등 다양한 기술 분야를...\n",
-      "--------------------------------------------------------------------------------\n",
-      "\n",
-      "[4] 유사도: 0.3996\n",
-      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
-      "청크 인덱스: 93\n",
-      "페이지: 21\n",
-      "섹션: None\n",
-      "내용:  nce/ |\n",
-      "\n",
-      "\n",
-      "\n",
-      "<table>\n",
-      "<title>\n",
-      "2024년 AI 및 기술 컨퍼런스 일정\n",
-      "</title>\n",
-      "<details>\n",
-      "이 표는 2024년에 열리는 주요 기술 및 AI 컨퍼런스에 대한 정보를 보여줍니다. 첫 번째 행사는 CES 2024로, 기간은 2024.1.9-12이며, 장소는 미국 라스베가스입니다. 설명으로는 컴퓨터 비전, AR/VR, 디지털 헬스 등...\n",
-      "--------------------------------------------------------------------------------\n",
-      "\n",
-      "[5] 유사도: 0.3040\n",
-      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
-      "청크 인덱스: 4\n",
+      "청크 인덱스: 3\n",
       "페이지: 1\n",
       "섹션: None\n",
-      "내용: 3. 기술/연구 ▹ 영국 과학혁신기술부, AI 안전 연구소 설립 발표 ······························································ 15 ▹ 구글 딥마인드, 범용 AI 모델의 기능과 동작에 대한 분류 체계 발표 ······························ 16 ▹ 갈릴레오의 LLM 환각 지수 평가...\n",
+      "내용: ▹ 삼성전자, 자체 개발 생성 AI ‘삼성 가우스’ 공개 ··························································· 10 ▹ 구글, 앤스로픽에 20억 달러 투자로 생성 AI 협력 강화 ················································ 11 ▹ IDC, 2027년 AI 소프...\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "[2] 유사도: 0.0460\n",
+      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
+      "청크 인덱스: 2\n",
+      "페이지: 1\n",
+      "섹션: None\n",
+      "내용: ▹ EU AI 법 3자 협상, 기반모델 규제 관련 견해차로 난항 ··················································· 6 2. 기업/산업 ▹ 미국 프런티어 모델 포럼, 1,000만 달러 규모의 AI 안전 기금 조성 ································ 7 ▹ 코히어, 데이터 투명성 확보를 위한 데...\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "[3] 유사도: 0.0374\n",
+      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
+      "청크 인덱스: 50\n",
+      "페이지: 12\n",
+      "섹션: None\n",
+      "내용: SPRi AI Brief | 2023-12월호 # 삼성전자, 자체 개발 생성 AI ‘삼성 가우스’ 공개 # KEY Contents n 삼성전자가 온디바이스에서 작동 가능하며 언어, 코드, 이미지의 3개 모델로 구성된 자체 개발 생성 AI 모델 ‘삼성 가우스’를 공개 n 삼성전자는 삼성 가우스를 다양한 제품에 단계적으로 탑재할 계획으로, 온디바이스 작동이 가...\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "[4] 유사도: 0.0325\n",
+      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
+      "청크 인덱스: 51\n",
+      "페이지: 12\n",
+      "섹션: None\n",
+      "내용: 최적화된 크기의 모델 선택이 가능 ∙ 삼성 가우스는 라이선스나 개인정보를 침해하지 않는 안전한 데이터를 통해 학습되었으며, 온디바이스에서 작동하도록 설계되어 외부로 사용자의 정보가 유출되지 않는 장점을 보유 ∙ 삼성전자는 삼성 가우스를 활용한 온디바이스 AI 기술도 소개했으며, 생성 AI 모델을 다양한 제품에 단계적으로 탑재할 계획 n 삼성 가우스는 △텍스...\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "[5] 유사도: 0.0316\n",
+      "파일: ../data/SPRI_AI_Brief_2023년12월호_F.pdf\n",
+      "청크 인덱스: 52\n",
+      "페이지: 12\n",
+      "섹션: None\n",
+      "내용: 사내 소프트웨어 개발에 최적화 ∙ 이미지 모델은 창의적인 이미지를 생성하고 기존 이미지를 원하는 대로 바꿀 수 있도록 지원하며 저해상도 이미지의 고해상도 전환도 지원 n IT 전문지 테크리퍼블릭(TechRepublic)은 온디바이스 AI가 주요 기술 트렌드로 부상했다며, 2024년부터 가우스를 탑재한 삼성 스마트폰이 메타의 라마(Llama)2를 탑재한 퀄컴...\n",
       "--------------------------------------------------------------------------------\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
